--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
-    "expo-router": "^1.5.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -35,7 +36,10 @@
     "@types/react": "~18.0.14",
     "jest": "^29.2.1",
     "jest-expo": "~48.0.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
   "private": true
