--- a/app.json
+++ b/app.json
@@ -25,6 +25,14 @@
     "web": {
       "bundler": "metro",
       "favicon": "./src/assets/images/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
+      ]
+    ]
   }
 }
