--- a/app.json
+++ b/app.json
@@ -29,9 +29,11 @@
     "plugins": [
       [
         "expo-camera",
-        {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
-        }
+        { "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera." }
+      ],
+      [
+        "expo-local-authentication",
+        { "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID." }
       ]
     ]
   }
