--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
+    "expo-local-authentication": "~13.3.0",
     "expo-router": "^1.5.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -30,13 +31,16 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.10",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
