--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.45.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -58,7 +59,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "*"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
