STORY_BOOK: npx sb@next init --type react_native
npx sb@next init --type react_native

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook-watch": "sb-rn-watcher",
+    "storybook": "sb-rn-get-stories --config-path src/.storybook && EXPO_PUBLIC_STORYBOOK='true' expo start",
+    "storybook:ios": "sb-rn-get-stories --config-path src/.storybook && EXPO_PUBLIC_STORYBOOK='true' expo start --ios",
+    "storybook:android": "sb-rn-get-stories --config-path src/.storybook && EXPO_PUBLIC_STORYBOOK='true' expo start --android"
   },
   "jest": {
     "preset": "jest-expo"
@@ -26,14 +31,23 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
+    "@storybook/addon-ondevice-actions": "^6.5.4",
+    "@storybook/addon-ondevice-controls": "^6.5.4",
+    "@storybook/react-native": "^6.5.4",
     "@types/react": "~18.2.14",
+    "babel-loader": "^8.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
